<resources>
    <string name="app_name">POSCustomer</string>
    <string name="timeout">Timeout occurred, Check your internet connection</string>
    <string name="something_wrong">Error occurred with code</string>
    <string name="remember">Remember Me</string>
    <string name="forgot">Forgot Password</string>
    <string name="newuser">Register New User</string>
    <string name="login">Login</string>
    <string name="timestamp">Timestamp of Purchase</string>
    <string name="feedback">FEEDBACK</string>
    <string name="offer">OFFER Re 500.00</string>
    <string name="discount">Discount 50%</string>
    <string name="mrp">Actual Price Re 1000</string>
    <string name="catagory"><![CDATA[Mens hair cut & wash]]></string>
    <string name="merchant">Merchant Name</string>
    <string name="merchant_addr">Address</string>
    <string name="lorem">Description</string>
    <string name="quila_name2">Ratings</string>
    <string name="dummy_text">Lorem ipsum dolur sit amet, Lorem ipsum dolur sit amet, Lorem ipsum dolur sit amet, Lorem ipsum dolur sit amet</string>
    <string name="more">More...</string>
    <string name="drawer_open">openDrawer</string>
    <string name="drawer_close">closeDrawer</string>
    <string name="player_error">Error initializing YouTube player: %s</string>
    <string name="seek_to">Jump To</string>
    <string name="seek_to_hint">Seconds</string>
    <string name="likes">Likes</string>
    <string name="bought">Bought</string>
    <string name="buy">Buy</string>
</resources>
