<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg">

    <android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/ll_bottom"
        android:fitsSystemWindows="true"
        >

        <android.support.design.widget.AppBarLayout
            android:id="@+id/app_bar_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true">

            <android.support.design.widget.CollapsingToolbarLayout
                android:id="@+id/collapsing_toolbar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fitsSystemWindows="true"
                app:contentScrim="@color/colorPrimary"
                app:layout_scrollFlags="scroll|exitUntilCollapsed">


                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="250dp">

                    <ImageView
                        android:id="@+id/expandedImage"
                        android:layout_width="match_parent"
                        android:layout_height="250dp"
                        android:scaleType="centerCrop"
                        android:src="@drawable/card_5"
                        app:layout_collapseMode="parallax"
                        app:layout_collapseParallaxMultiplier="0.7" />


                </FrameLayout>


                <android.support.v7.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    app:layout_collapseMode="pin"
                    app:popupTheme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">


                </android.support.v7.widget.Toolbar>


            </android.support.design.widget.CollapsingToolbarLayout>

        </android.support.design.widget.AppBarLayout>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/dim_10"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:src="@drawable/ic_11"
            android:padding="@dimen/dim_10"
            app:layout_anchor="@id/app_bar_layout"
            app:layout_anchorGravity="bottom|right|end" />


        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dim_10"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:padding="@dimen/dim_10"
            android:src="@drawable/ic_8"
            app:layout_anchor="@id/app_bar_layout"
            app:layout_anchorGravity="bottom|right|start" />

        <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="@dimen/dim_10"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dim_5"
                android:layout_marginRight="@dimen/dim_5"
                android:orientation="vertical">


                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/dim_5">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/dim_5"
                        android:layout_marginRight="@dimen/dim_5"
                        android:orientation="vertical">


                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:paddingBottom="10dp"
                            android:paddingTop="10dp">

                            <RelativeLayout
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="@dimen/dim_15"
                                android:layout_weight="2">

                                <TextView
                                    android:id="@+id/txt1"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_centerHorizontal="false"
                                    android:text="@string/merchant"
                                    android:textColor="@color/black"
                                    android:textSize="@dimen/dim_25" />

                                <TextView
                                    android:id="@+id/addr"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_below="@+id/txt1"
                                    android:layout_centerHorizontal="false"
                                    android:text="@string/merchant_addr"
                                    android:textColor="@color/black"
                                    android:textSize="@dimen/dim_20" />

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_alignParentRight="true"
                                    android:layout_below="@id/addr"
                                    android:text="@string/more"
                                    android:textColor="@color/colorPrimary"
                                    android:textSize="@dimen/dim_15" />

                            </RelativeLayout>


                        </LinearLayout>
                    </LinearLayout>
                </android.support.v7.widget.CardView>




                <android.support.v7.widget.CardView
                    android:id="@+id/about_card_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/dim_5"
                    android:visibility="visible">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:paddingBottom="20dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/dim_10"
                            android:padding="@dimen/dim_2"
                            android:text="@string/offer"
                            android:textColor="@color/black"
                            android:textSize="@dimen/dim_20" />


                        <TextView
                            android:id="@+id/myImageViewText1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="@dimen/dim_1"
                            android:layout_marginLeft="@dimen/dim_15"
                            android:paddingBottom="@dimen/dim_2"
                            android:text="@string/discount"
                            android:textColor="@color/black"
                            android:textSize="@dimen/dim_18" />

                        <TextView
                            android:id="@+id/myImageViewText2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/dim_15"
                            android:layout_marginTop="@dimen/dim_1"
                            android:paddingBottom="@dimen/dim_4"
                            android:text="@string/mrp"
                            android:textColor="@color/black"
                            android:textSize="@dimen/dim_12" />

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1px"
                            android:layout_marginBottom="@dimen/dim_2"
                            android:background="@color/colorPrimary" />

                        <RelativeLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/dim_5"
                            android:layout_marginRight="@dimen/dim_5"
                            android:background="@color/white"
                            android:backgroundTint="@color/white">

                            <TextView
                                android:id="@+id/likes"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:drawableLeft="@drawable/ic_14"
                                android:drawablePadding="@dimen/dim_15"
                                android:gravity="center"
                                android:padding="@dimen/dim_10"
                                android:text="@string/likes"
                                android:textColor="@color/black"
                                android:textSize="@dimen/dim_15"
                                android:textStyle="italic" />

                            <TextView
                                android:id="@+id/brought"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_alignParentRight="true"
                                android:drawableLeft="@drawable/ic_15"
                                android:drawablePadding="@dimen/dim_15"
                                android:gravity="center"
                                android:padding="@dimen/dim_10"
                                android:text="@string/bought"
                                android:textColor="@color/black"
                                android:textSize="@dimen/dim_15"
                                android:textStyle="italic" />

                        </RelativeLayout>

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1px"
                            android:layout_marginBottom="@dimen/dim_25"
                            android:background="@color/colorPrimary" />
                    </LinearLayout>
                </android.support.v7.widget.CardView>




            </LinearLayout>
        </android.support.v4.widget.NestedScrollView>

    </android.support.design.widget.CoordinatorLayout>

    <LinearLayout
        android:id="@+id/ll_bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">

        <TextView
            android:id="@+id/btn_likes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="@drawable/img_1"
            android:gravity="center"
            android:padding="@dimen/dim_5"
            android:text="@string/likes"
            android:textColor="@color/white"
            android:textSize="@dimen/dim_20" />

        <View
            android:layout_width="@dimen/dim_2"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/dim_2"
            android:background="@color/white" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/img_1"
            android:gravity="center"
            android:padding="@dimen/dim_5"
            android:text="@string/buy"
            android:textColor="@color/white"
            android:textSize="@dimen/dim_20" />

    </LinearLayout>
</RelativeLayout>

