<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:orientation="vertical">


    <ImageView
        android:id="@+id/bg_login_trans"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="@dimen/dim_15"
        android:layout_marginTop="@dimen/dim_25"
        android:src="@drawable/bg_w"
        android:padding="@dimen/dim_10"/>


    <ImageView
        android:id="@+id/logo_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="@dimen/dim_40"
        android:layout_marginRight="@dimen/dim_40"
        android:layout_marginTop="@dimen/dim_50"
        android:adjustViewBounds="true"
        android:scaleType="centerCrop"
        android:src="@drawable/logo" />

    <Space
        android:layout_width="@dimen/dim_35"
        android:layout_height="@dimen/dim_35" />

    <LinearLayout
        android:id="@+id/linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <EditText
            android:id="@+id/edt_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dim_50"
            android:layout_marginRight="@dimen/dim_50"
            android:layout_marginTop="@dimen/dim_5"
            android:background="@drawable/back"
            android:gravity="center_vertical"
            android:hint="Email"
            android:inputType="textEmailAddress"
            android:padding="@dimen/dim_10"
            android:textSize="@dimen/dim_18" />

        <Space
            android:layout_width="@dimen/dim_15"
            android:layout_height="@dimen/dim_15" />

        <EditText
            android:id="@+id/edt_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dim_50"
            android:layout_marginRight="@dimen/dim_50"
            android:layout_marginTop="@dimen/dim_5"
            android:background="@drawable/back"
            android:drawablePadding="@dimen/dim_19"
            android:drawableRight="@drawable/ic_1"
            android:gravity="center_vertical"
            android:hint="Password"
            android:inputType="textPassword"
            android:padding="@dimen/dim_10"
            android:textSize="@dimen/dim_18" />

    </LinearLayout>

    <Space
        android:layout_width="@dimen/dim_15"
        android:layout_height="@dimen/dim_15" />

    <TextView
        android:id="@+id/txt_remember"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/linear_layout"
        android:layout_marginLeft="@dimen/dim_60"
        android:layout_marginRight="@dimen/dim_60"
        android:layout_marginTop="@dimen/dim_20"
        android:drawableLeft="@drawable/ic_3"
        android:drawablePadding="@dimen/dim_15"
        android:padding="@dimen/dim_5"
        android:gravity="center_vertical"
        android:text="@string/remember"
        android:textSize="@dimen/dim_15"
        android:textStyle="bold" />


    <RelativeLayout
        android:layout_below="@+id/txt_remember"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:padding="@dimen/dim_10">

        <TextView
            android:id="@+id/btn_login"
            android:gravity="center_horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dim_42"
            android:layout_marginRight="@dimen/dim_42"
            android:layout_marginTop="@dimen/dim_15"
            android:background="@color/colorPrimary"
            android:text="@string/login"
            android:padding="@dimen/dim_8"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="@dimen/dim_20"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txt_forgot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/dim_5"
            android:layout_marginBottom="@dimen/dim_15"
            android:layout_marginLeft="@dimen/dim_30"
            android:layout_alignParentBottom="true"
            android:gravity="center_vertical"
            android:text="@string/forgot" />

        <TextView
            android:id="@+id/register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/dim_5"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:gravity="bottom"
            android:layout_marginBottom="@dimen/dim_15"
            android:layout_marginLeft="@dimen/dim_35"
            android:layout_marginRight="@dimen/dim_30"
            android:text="@string/newuser" />


    </RelativeLayout>


</RelativeLayout>